--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-toastr": "^3.0.0",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "resolve-url-loader": "^2.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -47,10 +48,11 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.0.6",
     "node-sass": "^4.7.2",
+    "react-svg-loader": "^2.1.0",
     "sass-loader": "^6.0.7",
     "sinon": "^4.4.6",
     "style-loader": "^0.20.3",
-    "url-loader": "^1.0.1",
+    "url-loader": "^1.1.1",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.1"
