--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "google-maps-react": "^1.1.11",
+    "jwt-decode": "^2.2.0",
     "react": "^16.3.2",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
