--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   "author": "belikova",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.10",
+    "@fortawesome/free-solid-svg-icons": "^5.6.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "google-maps-react": "^1.1.11",
+    "prop-types": "^15.6.2",
     "react": "^16.3.2",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
