--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "google-maps-react": "^1.1.11",
+    "lodash": "^4.17.11",
     "prop-types": "^15.6.2",
     "react": "^16.3.2",
     "react-dom": "^16.2.0",
